--- a/src/app/shared/components/play-list-body/play-list-body.component.html
+++ b/src/app/shared/components/play-list-body/play-list-body.component.html
@@ -1,21 +1,21 @@
 <div class="play-list-body">
     <ul class="play-list-table-header">
-        <li>Nombre ❤</li>
-        <li>álbum 🆗</li>
+        <li (click)="changeSort('name')">Nombre ❤</li>
+        <li (click)="changeSort('album')">álbum 🆗</li>
         <li>fecha incorporación 🍌😁</li>
-        <li><i class="uil uil-clock-eight"></i></li>
+        <li><i class=" uil uil-clock-eight "></i></li>
     </ul>
-    <ul class="play-list-rows" *ngFor="let track of tracks ">
-        <li class="track-name">
-            <ng-container *ngTemplateOutlet="coverSection;context:{track:track}"></ng-container>
+    <ul class="play-list-rows " *ngFor="let track of tracks |orderList:optionSort.property:optionSort.order ">
+        <li class="track-name ">
+            <ng-container *ngTemplateOutlet="coverSection;context:{track:track} "></ng-container>
         </li>
-        <li class="track-name-opacity">
+        <li class="track-name-opacity ">
             {{track.album}}
         </li>
-        <li class="track-name-opacity">
+        <li class="track-name-opacity ">
             {{track.album}}
         </li>
-        <li class="track-name-opacity">
+        <li class="track-name-opacity ">
             {{track.album}}
         </li>
 
@@ -23,13 +23,13 @@
 </div>
 
 <!--template del cover-->
-<ng-template #coverSection let-track="track">
+<ng-template #coverSection let-track="track ">
 
-    <div class="cover-section">
-        <img appImgBroken class="cover-track" [src]="track.cover" [alt]="track.name">
-        <div class="cover-info">
-            <div class="name-track">{{track.name}}</div>
-            <div class="name-track-details">{{track.artist.name}}</div>
+    <div class="cover-section ">
+        <img appImgBroken class="cover-track " [src]="track.cover " [alt]="track.name ">
+        <div class="cover-info ">
+            <div class="name-track ">{{track.name}}</div>
+            <div class="name-track-details ">{{track.artist.name}}</div>
         </div>
     </div>
 
