--- a/src/app/modules/history/pages/hisotry-page/hisotry-page.component.html
+++ b/src/app/modules/history/pages/hisotry-page/hisotry-page.component.html
@@ -1,1 +1,4 @@
-<p>hisotry-page works!</p>
+<div class="history-page">
+    <app-search (callbackData)="receiveData($event)"></app-search>
+    <app-play-list-body [tracks]="listResults$ | async"></app-play-list-body>
+</div>
